11_traffic-management/11.5/vs-advertisement-fault-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: advertisement-route
spec:
  hosts:
  - advertisement
  http:
  - fault:
      delay:
        fixedDelay: 3s
        percentage:
          value: 100
    route:
    - destination:
        host: advertisement
        subset: v1
